manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: car-racing-app
  namespace: argocd
spec:
  replicas: 2
  selector:
    matchLabels:
      app: car-racing-app
  template:
    metadata:
      labels:
        app: car-racing-app
    spec:
      containers:
        - name: car-racing-app
          image: rukevweubio/car-racing-app:latest
          ports:
            - containerPort: 80
