manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: car-racing-service
  namespace: dev
spec:
  selector:
    app: car-racing-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
