manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: car-racing-ingress
  namespace: dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host:   # Replace with your actual domain or set up a /etc/hosts entry
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: car-racing-service
                port:
                  number: 80
